2008-08-06  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (on_btn_nullify_search_clicked): Modified the query
	that gets the sales to nullify.
	(on_btn_nullify_ok_clicked): Fixed some minor bugs.
	(on_selection_nullify_sales_change): Removed condition that was
	asking for the id_detail on venta_anulada.

	* manejo_productos.c (ListClean): Fixed to not pass anything when
	venta->header is a null pointer.

	* ventas.c (on_btn_nullify_ok_clicked): Modified to deal with the
	new nullify concept.

	* postgres-functions.c (nullify_sale): Modified to accept only one
	argument, the sale id.

	* ventas.c (nullify_sale_datail): Deleted function.

2008-07-29  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* rizoma_informes.c (fill_caja_data): Replaced the use of a big
	query for a plpsql function.

2008-07-29  Jonathan Gonzalez V.  <zeus@gnu.org>

	* administracion_productos.c (ModificarMargenVenta): Fixed to fit
	with the use of GtkBuilder.
	(Recepcion, RecivirWindow, Devolucion, DevolucionWindow): Deleted functions.
	Deleted unnecessary vars.

2008-07-28  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* caja.h: Deleted GtkWidget *caja_button.

	* caja.c (ArqueoCajaLastDay): Deleted function.

	* ventas.c (FillProductSell): Replaced g_ascii_strtod() for
	g_strtod() and PUT macro.
	(SearchProductByCode): Added a gdouble stock var to eval if the
	product really has stock. This avoid any problem of products with
	stock between 0 and 1.

2008-07-27  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma_informes.c (fill_products_rank): Avoided the problem that
	was showing a nan% when there wasn't a margin.

	* postgres-functions.c (ReturnProductsRank): Replaced the long
	query for the use of ranking_ventas() plpsql function.

2008-07-25  Jonathan Gonzalez V.  <zeus@lunareja.lunareja>

	* manejo_productos.c (CompraCreateNew): If the product doesn't
	exist we return NULL.
	(CompraAgregarALista): If we couldn't get the info of a product we
	return FALSE.
